.provarCaches/00D5f000005vwGkEAI/objects/rstkf__ufxdetail__c.object
<CustomObject>
    <description>ufxdetail__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxdetail_apinvtxn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Blank unless Source of Open Transaction = AP, in which case it is a link to the source transaction.</inlineHelpText>
        <label>AP Transaction</label>
        <referenceTo>rstkf__apinvtxn__c</referenceTo>
        <relationshipLabel>UFX Details</relationshipLabel>
        <relationshipName>ufxdetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxdetail_arinvtxn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Blank unless Source of Open Transaction = AR, in which case it is a link to the source transaction.</inlineHelpText>
        <label>AR Transaction</label>
        <referenceTo>rstkf__arinvtxn__c</referenceTo>
        <relationshipLabel>UFX Details</relationshipLabel>
        <relationshipName>ufxdetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxdetail_cracct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is null if Variance equals zero, or is a link to the GL Account to be credited for the resulting accrued gain or loss on foreign exchange transaction.</inlineHelpText>
        <label>Credit Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>UFX Details (Credit Account)</relationshipLabel>
        <relationshipName>ufxdetailscr</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxdetail_curr__c</fullName>
        <inlineHelpText>A link to the Currency Master record that this record pertains to.</inlineHelpText>
        <label>Foreign Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxdetail_dracct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is null if Variance equals zero, or is a link to the GL Account to be debited for the resulting accrued gain or loss on foreign exchange transaction.</inlineHelpText>
        <label>Debit Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>UFX Details (Debit Account)</relationshipLabel>
        <relationshipName>ufxdetailsdr</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxdetail_fcvalue__c</fullName>
        <inlineHelpText>This is the value of the transaction or account balance in the foreign currency.</inlineHelpText>
        <label>Foreign Currency Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxdetail_gainamt__c</fullName>
        <inlineHelpText>This is equal to either zero or Variance. It represents the gain to be accrued from this UFX run.</inlineHelpText>
        <label>Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxdetail_glacctname__c</fullName>
        <inlineHelpText>A pointer to a GL Account record having an Fx Type of Monetary Cash or Monetary Non-Cash. This is the account to which this record pertains.</inlineHelpText>
        <label>GL Account</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxdetail_homeafter__c</fullName>
        <inlineHelpText>This is the value of the transaction or account balance in home currency before the UFX revaluation.</inlineHelpText>
        <label>Home Currency Value After UFX</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxdetail_homebefore__c</fullName>
        <inlineHelpText>This is the value of the transaction or account balance in home currency before the UFX revaluation.</inlineHelpText>
        <label>Home Currency Value Before UFX</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxdetail_lossamt__c</fullName>
        <inlineHelpText>This is equal to either zero or Variance. It represents the loss to be accrued from this UFX run.</inlineHelpText>
        <label>Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxdetail_name__c</fullName>
        <formula>rstkf__ufxdetail_ufxacctcurrsum__r.rstkf__ufxacctcurrsum_name__c &amp; &quot; &quot; &amp; 
IF(NOT(ISNULL(rstkf__ufxdetail_apinvtxn__c)),
rstkf__ufxdetail_apinvtxn__r.Name,
IF(NOT(ISNULL(rstkf__ufxdetail_arinvtxn__c)),
rstkf__ufxdetail_arinvtxn__r.Name,
rstkf__ufxdetail_porcptap__r.Name
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UFX Detail Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxdetail_porcptap__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Blank unless Source of Open Transaction = Accrued AP, in which case it is a link to the source transaction.</inlineHelpText>
        <label>Accrued AP Transaction</label>
        <referenceTo>rstk__porcptap__c</referenceTo>
        <relationshipLabel>UFX Details</relationshipLabel>
        <relationshipName>ufxdetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxdetail_rate__c</fullName>
        <inlineHelpText>The rate set according to Rate Method, or zero if Rate Method = No Historical Rate Set.</inlineHelpText>
        <label>Rate</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxdetail_ratemethod__c</fullName>
        <inlineHelpText>Automatically set to one of these three values:
Cash 
Historical
No Historical Rate Set</inlineHelpText>
        <label>Rate Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Historical</fullName>
                </value>
                <value>
                    <fullName>No Historical Rate Set</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__ufxdetail_subsystem__c</fullName>
        <inlineHelpText>The source of the transaction being revalued – one of:
AR
AP
Accrued AP
Other</inlineHelpText>
        <label>Source of Open Transaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>Accrued AP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__ufxdetail_txndesc__c</fullName>
        <inlineHelpText>This is a concatenated string of data whose construction varies according to Source of Open Transaction.</inlineHelpText>
        <label>Transaction Description</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxdetail_ufxacctcurrsum__c</fullName>
        <inlineHelpText>This is a pointer to the GL Account + Foreign Currency record which comprises this record as part of its contributing detail.</inlineHelpText>
        <label>GL Account / Foreign Currency Summary</label>
        <referenceTo>rstkf__ufxacctcurrsum__c</referenceTo>
        <relationshipLabel>UFX Details</relationshipLabel>
        <relationshipName>ufxdetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxdetail_ufxhead__c</fullName>
        <inlineHelpText>A link to the UFXHEAD record for the run.</inlineHelpText>
        <label>This Run</label>
        <referenceTo>rstkf__ufxhead__c</referenceTo>
        <relationshipLabel>UFX Details</relationshipLabel>
        <relationshipName>ufxdetails</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxdetail_variance__c</fullName>
        <formula>rstkf__ufxdetail_homebefore__c -  rstkf__ufxdetail_homeafter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is Home Currency Value Before UFX minus Home Currency Value After UFX. If it is non-zero, either a gain or a loss will be accrued.</inlineHelpText>
        <label>Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>UFX Detail</label>
    <nameField>
        <label>UFX Detail</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UFX Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>